force-app/main/default/objects/Lead_Paint__c/Lead_Paint__c.object-meta.xml
<CustomObject>
    <label>Lead Paint</label>
    <nameField>
        <label>Lead Paint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Paints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>