force-app/main/default/objects/Lead_Paint__c/fields/Calling_for_yourself_or_someone_else__c.field-meta.xml
<CustomField>
    <fullName>Calling_for_yourself_or_someone_else__c</fullName>
    <label>Calling for yourself or someone else?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>