force-app/main/default/objects/Lead_Paint__c/fields/Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_Age__c</fullName>
    <inlineHelpText>How old is your child?</inlineHelpText>
    <label>Child Age</label>
    <type>Date</type>
</CustomField>