force-app/main/default/objects/Lead_Paint__c/fields/Child_Diagnosis_Details__c.field-meta.xml
<CustomField>
    <fullName>Child_Diagnosis_Details__c</fullName>
    <description>What learning disability or health issue has your child been diagnosed with?</description>
    <inlineHelpText>What learning disability or health issue has your child been diagnosed with?</inlineHelpText>
    <label>Child Diagnosis Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>