force-app/main/default/objects/Lead_Paint__c/fields/Child_Exposure_Source__c.field-meta.xml
<CustomField>
    <fullName>Child_Exposure_Source__c</fullName>
    <description>Do you know how your child would have been exposed to lead?</description>
    <inlineHelpText>Do you know how your child would have been exposed to lead?</inlineHelpText>
    <label>Child Exposure Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>