force-app/main/default/objects/Lead_Paint__c/fields/Child_Health_Issues__c.field-meta.xml
<CustomField>
    <fullName>Child_Health_Issues__c</fullName>
    <description>Has your child been diagnosed with any sort of learning disability (ADD, ADHD, low IQ) or any of the following health issues: delayed puberty, heart disease, kidney disease?</description>
    <inlineHelpText>Has your child been diagnosed with any sort of learning disability (ADD, ADHD, low IQ) or any of the following health issues: delayed puberty, heart disease, kidney disease?</inlineHelpText>
    <label>Child Health Issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>