force-app/main/default/objects/Lead_Paint__c/fields/Child_Lived_In_Rented_Home__c.field-meta.xml
<CustomField>
    <fullName>Child_Lived_In_Rented_Home__c</fullName>
    <inlineHelpText>Has your child ever lived or spent significant time in a rented home or apartment that may have been built before 1978?</inlineHelpText>
    <label>Child Lived In Rented Home?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>