force-app/main/default/objects/Lead_Paint__c/fields/Child_Tested_For_Lead__c.field-meta.xml
<CustomField>
    <fullName>Child_Tested_For_Lead__c</fullName>
    <description>Has your child been tested by a medical provider for lead levels in his/her blood through a finger-prick, heel-prick or other blood draw method?</description>
    <inlineHelpText>Has your child been tested by a medical provider for lead levels in his/her blood through a finger-prick, heel-prick or other blood draw method?</inlineHelpText>
    <label>Child Tested For Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>