force-app/main/default/objects/Lead_Paint__c/fields/Child_Treatment_For_Lead__c.field-meta.xml
<CustomField>
    <fullName>Child_Treatment_For_Lead__c</fullName>
    <description>Has your child received any treatment for elevated levels of lead in his or her blood?</description>
    <inlineHelpText>Has your child received any treatment for elevated levels of lead in his or her blood?</inlineHelpText>
    <label>Child Treatment For Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>