force-app/main/default/objects/Lead_Paint__c/fields/Claimant_Address__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Address__c</fullName>
    <label>Claimant Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>