force-app/main/default/objects/Lead_Paint__c/fields/Claimant_Email__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Email__c</fullName>
    <label>Claimant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>