force-app/main/default/objects/Lead_Paint__c/fields/Claimant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Phone__c</fullName>
    <label>Claimant Phone</label>
    <type>Phone</type>
</CustomField>