force-app/main/default/objects/Lead_Paint__c/fields/Contacted_By_Agency__c.field-meta.xml
<CustomField>
    <fullName>Contacted_By_Agency__c</fullName>
    <description>Who contacted you?</description>
    <inlineHelpText>Who contacted you?</inlineHelpText>
    <label>Contacted By Agency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>