force-app/main/default/objects/Lead_Paint__c/fields/Elevated_Lead_Advised__c.field-meta.xml
<CustomField>
    <fullName>Elevated_Lead_Advised__c</fullName>
    <label>Elevated Lead Advised</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>