force-app/main/default/objects/Lead_Paint__c/fields/Health_Department_Contact__c.field-meta.xml
<CustomField>
    <fullName>Health_Department_Contact__c</fullName>
    <inlineHelpText>Has any health department or other governmental agency contacted you about an environmental inspection of the home or a lead reduction program?</inlineHelpText>
    <label>Health Department Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>