force-app/main/default/objects/Lead_Paint__c/fields/Legal_Authority__c.field-meta.xml
<CustomField>
    <fullName>Legal_Authority__c</fullName>
    <inlineHelpText>If calling about a loved one, do you have legal authority to file a claim on their behalf?</inlineHelpText>
    <label>Legal Authority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>