force-app/main/default/objects/Lead_Paint__c/fields/Represented_By_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Represented_By_Attorney__c</fullName>
    <label>Represented By Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes(DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>