force-app/main/default/objects/Lead_Paint__c/fields/Testing_Treatment_Location__c.field-meta.xml
<CustomField>
    <fullName>Testing_Treatment_Location__c</fullName>
    <inlineHelpText>Where did your child receive testing or treatment for elevated levels of lead in the blood?</inlineHelpText>
    <label>Testing/Treatment Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>