force-app/main/default/objects/Lead_Paint__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <description>What kind of treatment?</description>
    <label>Treatment Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>